[gd_scene format=3 uid="uid://ck0fkhrkagtvt"]

[ext_resource type="Theme" uid="uid://b8u4odj3rruh3" path="res://assets/Resources/Themes/Dark/DefaultDarkTheme.tres" id="1_uovyc"]
[ext_resource type="Script" uid="uid://c0i5fg6383j6t" path="res://editor/plugins/LoopEditor/KeyTrackPanel.gd" id="1_vvp7d"]
[ext_resource type="Texture2D" uid="uid://c3hfm0sge3bkp" path="res://assets/icons/AddCircle.svg" id="3_d47nw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sktog"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bctvb"]

[node name="KeyTrackPanel" type="PanelContainer" unique_id=22561303]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_uovyc")
script = ExtResource("1_vvp7d")

[node name="ScrollContainer" type="ScrollContainer" parent="." unique_id=1173865530]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sktog")

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer" unique_id=1609887226]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer" unique_id=896922919]
layout_mode = 2

[node name="IconsTrack" type="VBoxContainer" parent="ScrollContainer/HBoxContainer/VBoxContainer" unique_id=1758043738]
unique_name_in_owner = true
layout_mode = 2

[node name="AddTrackButton" type="TextureButton" parent="ScrollContainer/HBoxContainer/VBoxContainer" unique_id=679687738]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("3_d47nw")
ignore_texture_size = true
stretch_mode = 6

[node name="rack" type="Control" parent="ScrollContainer/HBoxContainer" unique_id=1930279261]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="ScrollContainer/HBoxContainer/rack" unique_id=759892630]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_bctvb")

[node name="Tracks" type="VBoxContainer" parent="ScrollContainer/HBoxContainer/rack/ScrollContainer2" unique_id=1321862906]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ScrollContainer/HBoxContainer/VBoxContainer/AddTrackButton" to="." method="_on_add_track_button_pressed"]
